Second Attempt on SSE -> Still not working. Will consider CISCO SSE Client now: https://github.com/CiscoSE/commons-networking/tree/main#sse-client